<resources>
    <string name="app_name">DogApp</string>
    <string name="edit_fragment_name">Editar Cita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="sintomas">
        <item>Síntomas</item>
        <item>Solo duerme</item>
        <item>No come</item>
        <item>Fractura extremidad</item>
        <item>Tiene pulgas</item>
        <item>Tiene garrapatas</item>
        <item>Bota demasiado pelo</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TitleEditarCita">Editar Cita</string>
    <string name="nombreMascota">Nombre de la mascota</string>
    <string name="raza">Raza</string>
    <string name="propietario">Nombre del propietario</string>
    <string name="telefono">Teléfono</string>
    <string name="guardarCita">Guardar Cita</string>
</resources>