<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_mascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreMascota"
            android:layout_marginTop="50dp"
            android:paddingHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_mascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_raza"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/raza"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_mascota">

            <AutoCompleteTextView
                android:id="@+id/iet_raza"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_propietario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/propietario"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_raza">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_propietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_propietario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_sintomas"
            android:layout_width="250dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@id/et_telefono"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="28dp"
            android:spinnerMode="dropdown"
            android:entries="@array/sintomas"/>
        
        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_sintomas"
            android:backgroundTint="@color/pink"
            android:layout_marginTop="60dp"
            android:text="@string/guardarCita"
            android:drawableLeft="@drawable/ic_guardar"
            android:enabled="false"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>